# TradeEvolve

./: README.md  pyproject.toml
.claude/: settings.local.json
