[tool.poetry]
name = "tradeevolve"
version = "0.1.0"
description = "TradeEvolve trading project"
authors = ["Developer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
